DoctorService class for calling the api

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Template</title>
+    <title>Doctor Search</title>
   </head>
   <body>
+    
     
   </body>
 </html>
