created input fields for doctor first and last name with a submit button

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <title>Doctor Search</title>
   </head>
   <body>
-    
+    <label for="firstName">Enter Doctor First Name:</label>
+    <input type="text" id="firstName">
+    <label for="lastName">Enter Doctor Last Name:</label>
+    <input type="text" id="lastName">
+    <button id="searchName" type="button">Find My Doctor!</button>
     
   </body>
 </html>
