--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,19 @@
     <title>Doctor Search</title>
   </head>
   <body>
-    <label for="firstName">Enter Doctor First Name:</label>
-    <input type="text" id="firstName">
-    <label for="lastName">Enter Doctor Last Name:</label>
-    <input type="text" id="lastName">
-    <button id="searchName" type="button">Find My Doctor!</button>
+    <div class="container">
+        <label for="firstName">Enter Doctor First Name:</label>
+        <input type="text" id="firstName">
+        <label for="lastName">Enter Doctor Last Name:</label>
+        <input type="text" id="lastName">
+        <button id="searchName" type="button">Find My Doctor!</button>
+    </div>
+    
+
+    <div class="container" id="output">
+      <div id="doctorResult"></div>
+      <div id="showErrors"></div>
+    </div>
     
   </body>
 </html>
