modified wording of select box

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <button id="searchName" type="button">Find My Doctor!</button>
   </div>
   <div class="container">
-    <label for="doctorTypes">Select the type Doctor you are looking for:</label>
+    <label for="doctorTypes">Select the type of Doctor you are searching for: </label>
     <select class="form-control" id="doctorTypes">
       <option value="General Practitioner">General Practitioner</option>
       <option value="Allergist/Immunologist">Allergist/Immunologist</option>
