--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <!-- Doctor Name Search -->
   <div class="container">
     <label for="firstName">Enter Doctor First Name:</label>
     <input type="text" id="firstName">
@@ -13,17 +14,77 @@
     <input type="text" id="lastName">
     <button id="searchName" type="button">Find My Doctor!</button>
   </div>
+  <!-- Doctor Type Search -->
   <div class="container">
     <label for="doctorTypes">Select the type of Doctor you are searching for: </label>
     <select class="form-control" id="doctorTypes">
       <option value="General Practitioner">General Practitioner</option>
-      <option value="Allergist/Immunologist">Allergist/Immunologist</option>
+      <option value="Gynecologist">Gynecologist</option>
       <option value="Dermatologist">Dermatologist</option>
       <option value="Ophthalmologist">Ophthalmologist</option>
       <option value="Psychiatrist">Psychiatrist</option>
       <option value="Urologist">Urologist</option>
     </select>
     <button id="searchType">Search!</button>
+  </div>
+  <!-- Symptom Quiz section -->
+  <div class="container">
+    <h1>Symptom Quiz</h1>
+    <h4>Answer the following questions to figure out what kind of doctor you should see</h4><br>
+    <label for="q1">1. What is your biggest hurt right now?</label>
+    <div class="radio">
+        <label>
+          <input type="radio" name="q1" value="dermatologist" checked>
+          My skin hurts
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="q1" value="general">
+          I have the sniffles, fever, chills, and my whole body hurts.
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="q1" value="mental">
+          I want mental health support.
+        </label>
+      </div>
+      <div class="radio">
+          <label>
+            <input type="radio" name="q1" value="general" checked>
+            Something else...
+          </label>
+        </div>
+      <label for="q2">2. Do you have a gender preference for your Doctor?</label>
+      <div class="radio">
+          <label>
+            <input type="radio" name="q2" value="male" checked>
+            Male
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q2" value="female">
+            Female
+          </label>
+        </div>
+        <div class="radio">
+          <label>
+            <input type="radio" name="q2" value="none">
+            No preference.
+          </label>
+        </div>
+        <div class="form-group">
+            <label for="q3">What are your Symptoms?</label><br>
+            <input type="checkbox" name="q3" value="general">I can't sleep<br>
+            <input type="checkbox" name="q3" value="dermatologist">My skin burning rash<br>
+            <input type="checkbox" name="q3" value="eye">My head hurts after reading<br>
+            <input type="checkbox" name="q3" value="gynecologist">My female reproductive parts hurt<br>
+            <input type="checkbox" name="q3" value="general">I have aches and pains<br>
+          </div>
+
+
   </div>
 
   <!-- Output section -->
